--- a/jsconfig.json
+++ b/jsconfig.json
@@ -1,7 +1,6 @@
-{
-  "compilerOptions": {
-    "paths": {
-      "@/*": ["./*"]
-    }
-  }
-}
+// {
+//   "compilerOptions": {
+//     "paths": {
+//     }
+//   }
+// }
