--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
   },
   "devDependencies": {
     "@types/node": "20.14.2",
-    "@types/react": "18.3.3"
+    "@types/react": "18.3.3",
+    "three": "^0.169.0",
+    "vanta": "^0.5.24"
   }
 }
