--- a/package.json
+++ b/package.json
@@ -10,7 +10,6 @@
   },
   "dependencies": {
     "@yudiel/react-qr-scanner": "^2.0.8",
-    "bootstrap": "^5.3.1",
     "bootstrap-icons": "^1.10.5",
     "eslint": "8.48.0",
     "eslint-config-next": "13.4.19",
@@ -22,6 +21,10 @@
   },
   "devDependencies": {
     "@types/node": "20.14.2",
-    "@types/react": "18.3.3"
+    "@types/react": "18.3.3",
+    "autoprefixer": "^10.4.20",
+    "daisyui": "^4.12.23",
+    "postcss": "^8.4.49",
+    "tailwindcss": "^3.4.17"
   }
 }
